--- a/src/components/location/location.module.css
+++ b/src/components/location/location.module.css
@@ -59,6 +59,10 @@
         flex-direction: column;
     }
     
+    .headerContainer {
+        text-align: center;
+    }
+    
     .mapContainer,
     .infoContainer {
         width: 100%;
