--- a/src/components/process/process.module.css
+++ b/src/components/process/process.module.css
@@ -58,6 +58,10 @@ h2 {
 }
 
 @media screen and (max-width: 767px) { 
+    .headerContainer {
+        text-align: center;
+    }
+
     .stepsColumnContainer {
         padding: 0;
     }
