--- a/src/components/services/services.module.css
+++ b/src/components/services/services.module.css
@@ -32,3 +32,8 @@ h3 {
     color: #000;
     font-weight: 400;  
 }
+@media screen and (max-width: 767px) { 
+    .headerContainer {
+        text-align: center;
+    }
+}
