--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+    line-height: 1.25;
+}
